// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`sequence many '' conditional success tests AST matches snapshot 1`] = `[]`;

exports[`sequence many 'ab' conditional success tests AST matches snapshot 1`] = `
[
  [
    "a",
    "b",
  ],
]
`;

exports[`sequence many 'abab' conditional success tests AST matches snapshot 1`] = `
[
  [
    "a",
    "b",
  ],
  [
    "a",
    "b",
  ],
]
`;

exports[`sequence many 'a' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": 1,
}
`;

exports[`sequence many 'aa' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": 1,
}
`;

exports[`sequence many 'aba' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": 3,
}
`;

exports[`sequence many 'baba' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": 0,
}
`;

exports[`sequence many 'bcaba' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": 0,
}
`;

exports[`sequence trim '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": 0,
}
`;

exports[`sequence trim 'a' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": 0,
}
`;

exports[`sequence trim 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": 1,
}
`;

exports[`sequence trim 'bab' conditional success tests AST matches snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'ba b' conditional success tests AST matches snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'ba  b' conditional success tests AST matches snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'b ab' conditional success tests AST matches snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'b  a b' conditional success tests AST matches snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'b abb' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": 4,
}
`;

exports[`sequence trim 'bcaba' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": 1,
}
`;

exports[`sequence or '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'that'",
    "'this'",
  ],
  "pos": 0,
}
`;

exports[`sequence or 'thisfoo' conditional success tests AST matches snapshot 1`] = `
[
  "this",
  "foo",
]
`;

exports[`sequence or 'thatfoo' conditional success tests AST matches snapshot 1`] = `
[
  "that",
  "foo",
]
`;

exports[`sequence or 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'that'",
    "'this'",
  ],
  "pos": 0,
}
`;

exports[`sequence or 'this' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'foo'",
  ],
  "pos": 4,
}
`;

exports[`sequence or 'that' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'foo'",
  ],
  "pos": 4,
}
`;

exports[`sequence or 'bar' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'that'",
    "'this'",
  ],
  "pos": 0,
}
`;
